[project]
name = "comfyui-webui-generator-node"
version = "0.1.0"
description = "ComfyUI custom node that generates shareable HTML UIs from ComfyUI API workflow JSON."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="ai-joe-git" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/ai-joe-git/ComfyUI-WebUI-Generator-Node"

[tool.setuptools]
py-modules = []
